--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
 
       <section id="contact">
-        <h2>9123465256</h2>
+        <h2>Contact</h2>
         <p>Email: hk624234@gmail.com</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/himanshu-k-471b4b30a/">linkedin.com/in</a></p>
         <p>GitHub: <a href="#">github.com/x</a></p>
